[gd_scene load_steps=2 format=2]

[ext_resource path="res://ItemCard.gd" type="Script" id=1]

[node name="ItemCard" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="TitleLabel" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 14.0

[node name="TypeLabel" type="Label" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0

[node name="PriceLabel" type="Label" parent="."]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 50.0

[node name="BuyButton" type="Button" parent="."]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 74.0
text = "Buy"

[node name="SaveButton" type="Button" parent="."]
margin_top = 78.0
margin_right = 1024.0
margin_bottom = 98.0
text = "Save"
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
